--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -7,14 +7,16 @@
     <uses-sdk
         android:minSdkVersion="19"
         android:targetSdkVersion="19" />
+    
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
-        android:icon="@drawable/ic_launcher"
+        android:icon="@drawable/logo"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name=".MainActivity"
+            android:name=".activity.ChooseAreaActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -22,6 +24,13 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        
+        <activity android:name=".activity.YunActivity"></activity>
+        <activity android:name=".activity.WeatherActivity"></activity>
+        
+        <service android:name="com.yunweather.app.service.AutoUpdateService"></service>
+        <receiver android:name="com.yunweather.app.receiver.AutoUpdateReceiver"></receiver>
+        
     </application>
 
 </manifest>
